tests/snapshots/align_imports/single_import.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_imports/single_import.input.py
---
"""
A genuine singleton block (just one import statement in the file)
fails the `members.len() >= 2` gate and so emits no edit. The lone
gap stays untouched.
"""

from collections import OrderedDict
