tests/snapshots/align_imports/two_blank_lines_break.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_imports/two_blank_lines_break.input.py
---
"""
Two blank lines between import runs end the block at the first
such gap, so the imports above and below the gap form separate
blocks and align independently.
"""

import collections as col
import numpy       as np


from os     import path
from typing import Any
