tests/snapshots/align_imports/unified_block.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_imports/unified_block.input.py
---
align-imports@242..243
align-imports@258..259
align-imports@271..272
align-imports@292..293
